# spotify-manager

./: .cache  .dockerignore  .flake8  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  THE RULES OF MUSIC LISTENING.md  albums_total.txt  control_file_safety_copy.json  justfile  pyproject.toml  start.sh
spotify_manager/: .cache  __init__.py  _auth.py  add_monthly_albums_to_control.py  add_monthly_tracks.py  albums_total.txt  api.py  compile_lists.py  convert_control_file.py  main.py  settings.py  sorting.py  web.py
spotify_manager/client/: __init__.py  lastfm.py
spotify_manager/files/: Spotify Albuns (03-11-2020).txt  albums_total_new.json  artists_total.json  comparison.json  control_file.json  initial_control_file.txt  lastfmstats-man-et-arms.json.gz.b64.part-aa  lastfmstats-man-et-arms.json.gz.b64.part-ab  lastfmstats-man-et-arms.json.gz.b64.part-ac  lastfmstats-man-et-arms.json.gz.b64.part-ad  lastfmstats-man-et-arms.json.gz.b64.part-ae  lastfmstats-man-et-arms.json.gz.b64.part-af  library_analysis_sync_log.jsonl  library_sync_log.jsonl  review_album_limits_decisions.json  stats_file.json  stats_history.json  test.json
spotify_manager/files/library_analysis_sync/: checkpoint.json
spotify_manager/files/library_analysis_sync/staging/: albums.jsonl  artists.jsonl
spotify_manager/frontend/: genre-reveal.html  index.html
spotify_manager/loaders_savers/: __init__.py
spotify_manager/models/: __init__.py  albums.py  artists.py  file_items.py  lookups.py  stats.py  tracks.py  your_library.py
spotify_manager/processors/: __init__.py  control_file_processors.py  library_lookups.py  stats_processors.py  total_albums_processor.py  your_library_processors.py
spotify_manager/routines/: analyse_library.py  blast_from_past.py  convert_library_file.py  count_items.py  daily_mind_radio.py  found_art.py  genre_reveal.py  monthly_routine.py  recover_removed_albums.py  review_album_limits.py  review_artists.py  upload_library_files.py
spotify_manager/utils/: comparison.py  convertion.py  growth.py  sorting.py
tests/: .cache  conftest.py  test_api.py  test_auth.py  test_cli_analyse_library.py  test_cli_blast_from_past.py  test_cli_daily_mind_radio.py  test_cli_found_art.py  test_cli_genre_reveal.py  test_cli_review_prompt.py  test_cli_upload_library_files.py  test_sorting.py  test_web.py
tests/client/: __int__.py  test_lastfm_client.py  test_spotipy_client.py
tests/loaders_savers/: __init__.py  test_loaders.py
tests/processors/: test_control_file_processors.py  test_library_lookups.py  test_stats_processors.py  test_total_albums_processors.py  test_your_library_album_ordering.py  test_your_library_processors.py
tests/routines/: test_analyse_library.py  test_blast_from_past.py  test_daily_mind_radio.py  test_found_art.py  test_genre_reveal.py  test_recover_removed_albums.py  test_review_album_limits.py  test_review_artists.py  test_upload_library_files.py
