[tool.poetry]
name = "spotify_manager"
version = "0.1.0"
description = ""
authors = ["Uriel Fiori <u.fiori@iib-institut.de>"]
packages = [{include = "spotify_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
black = "^23.3.0"
unidecode = "^1.3.6"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pyuca = "^1.2"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
