[project]
name = "spotify-manager"
version = "0.1.0"
description = ""
authors = [{ name = "Uriel Fiori", email = "u.fiori@iib-institut.de" }]
requires-python = ">=3.14"
dependencies = [
    "spotipy>=2.24.0",
    "unidecode>=1.3.8",
    "pyuca>=1.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0.1",
    "typer>=0.15",
]

[project.scripts]
spotify-manager = "spotify_manager.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spotify_manager"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-random-order>=1.1",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: bugbear, A: builtins, N: pep8-naming, D: pydocstyle
select = ["E", "W", "F", "I", "UP", "B", "A", "N", "D"]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
    "E203", # whitespace before ':' (black/ruff-formatter compatible)
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = ["spotify_manager"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
# tests/ mirror the package layout (tests/loaders_savers, ...); these flags let
# mypy resolve both without the "duplicate module" / "found twice" errors.
explicit_package_bases = true
namespace_packages = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]
